--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -22,10 +22,13 @@ body{
     border: 1px;
     border-width: 5px;
     border-color: blue;
-    bottom: 20px;
     border-bottom-style: groove;
+    }
 
-}
+    @media screen and (min-width = 742px)
+{ * {flex-direction: row;}
+} 
+    
 .header h1{
     font-size : 40px ;
     font-style: italic;
@@ -33,7 +36,7 @@ body{
     display: inline-block;
 }
 .header div{
-    padding-top: 15px;
+    padding-top: 20px;
     float:right;
     font-family: Arial, Helvetica, sans-serif;
     margin-right: 15px;
@@ -44,7 +47,11 @@ body{
 }
 .header div ul li{
     display:inline-block;
-    margin-left: 15px;
+    margin-left: 20px;
     margin-right: 15px;
     font-size: 20px;
+    justify-content: center;
+    align-items:center;
+    margin-top:-10px;
+
 }
