--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -9,6 +9,8 @@
     --primarycolour:rgb(221, 236, 241);
     --secondarycolor:rgb(39, 47, 161);
     --tertiarycolor:rgb(121, 249, 249);
+    --bordercolor:#0000ff;
+    
 }
 
 
@@ -20,13 +22,13 @@ body{
     font-family: 'Courier New', Courier, monospace;
     background-color: var(--tertiarycolor);
     color: var(--secondarycolor);
-    border: 1px;
     border-width: 5px;
-    border-color: blue;
+    border-color:var(--bordercolor);
     border-bottom-style: groove;
+    border-top: 5px;
     }
 
-    @media screen and (min-width = 742px)
+    @media screen and (max-width = 742px)
 { * { display: flex;
     flex-direction: row;
     flex-wrap:wrap;}
@@ -39,7 +41,7 @@ body{
     display: inline-block;
 }
 .header div{
-    padding-top: 20px;
+    padding-top: 10px;
     float:right;
     font-family: Arial, Helvetica, sans-serif;
     margin-right: 15px;
@@ -54,18 +56,55 @@ body{
     font-size: 20px;
     margin-top:-10px;
 }
-.aside
-{
-margin-bottom: 20px;
-margin-top:20px;
-display: inline-flex;
-height:300px;
+.left{
+    margin-left: 20px;
+    max-height: 100px;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    align-items:center;
+    margin-left:50px;
 
 }
-.right{
-    margin-left: 10px;
-    max-height: 50px;
+.content{
+    width:100%;
+    display:inline-block;
+    border-style:solid;
+    border-color:#0000ff;
+    border-top:0px;
+    }
+.AboutMe
+{
+padding-bottom: 20px;
+padding-top:20px;
+display: inline-flex;
+height:300px;
+color:var(--secondarycolor);
+align-items: center;
+background-color: var(--tertiarycolor);}
+
+p{  float:right;
+    padding-top: 5px;
+    margin-left: 30px;}
+
+.h2{
+    border-top: 0px;
+    border-left: 0px;
+    border-bottom: 0px;
+    height:150px ;
     border-color: black;
-border-width: 5px;
-border-style: double;
+    padding-right: 10px;
+    border-style: solid;
+    padding-left: 20px;
+}
+.border{
+    
+    border-style:solid;
+    border-color:#0000ff;
+    border-width:5px;
+    border-left: 0px;
+    border-right: 0px;
+    border-top: 5px;
+    border-bottom: 5px;
+
 }
