--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -83,9 +83,56 @@ color:var(--secondarycolor);
 align-items: center;
 background-color: var(--tertiarycolor);}
 
+.work
+{
+padding-bottom: 20px;
+padding-top:20px;
+display: inline-flex;
+height:300px;
+color:var(--secondarycolor);
+align-items: center;
+background-color: var(--tertiarycolor);}
+
+.horiseon{
+    display:block;
+    margin-left: 50px;
+    position: relative;
+    border-width: 3px;
+    border-color: black;
+    border-style: groove;
+    
+}
+.chess{
+    display:block;
+    margin-left: 50px;
+    position: relative;
+    border-width: 3px;
+    border-color: black;
+    border-style: groove;
+    
+}
+.board{
+    display:block;
+    margin-left: 50px;
+    position: relative;
+    border-width: 3px;
+    border-color: black;
+    border-style: groove;
+}.switch{
+    display:block;
+    margin-left: 50px;
+    position: relative;
+    border-width: 3px;
+    border-color: black;
+    border-style: groove;
+    
+}
+
 p{  float:right;
     padding-top: 5px;
-    margin-left: 35px;}
+    margin-left: 35px;
+    font-size: 24px;
+}
 
 .h2{
     border-top: 0px;
