--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -37,8 +37,10 @@ body{
 .header h1{
     font-size : 40px ;
     font-style: italic;
+    text-decoration: underline;
     font-weight: bolder;
     display: inline-block;
+
 }
 .header div{
     padding-top: 10px;
@@ -85,46 +87,88 @@ background-color: var(--tertiarycolor);}
 
 .work
 {
-padding-bottom: 20px;
+padding-bottom: 00px;
 padding-top:20px;
-display: inline-flex;
-height:300px;
+display:inline-flex;
+height: 800px;
 color:var(--secondarycolor);
 align-items: center;
 background-color: var(--tertiarycolor);}
+.w
+{
+    border-top: 0px;
+    border-left: 0px;
+    border-bottom: 0px;
+    height:600px ;
+    border-color: black;
+    padding-right: 38px;
+    border-style: solid;
+    padding-left: 20px;
+    padding-top: 240px;
+}
+.contact
+{
+padding-bottom: 60px;
+padding-top:20px;
+display:inline-flex;
+height: 20px;
+color:var(--secondarycolor);
+align-items: center;
+background-color: var(--tertiarycolor);
+text-align: center;
+width: 100%;
+}
+.c
+{
+    border-top: 0px;
+    border-left: 0px;
+    border-bottom: 0px;
+    height:60px ;
+    width:120px;
+    border-color: black;
+    border-style: solid;
+    padding-left: 5px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-right:10px;
+}
 
 .horiseon{
     display:block;
     margin-left: 50px;
     position: relative;
-    border-width: 3px;
+    border-width: 5px;
     border-color: black;
     border-style: groove;
+    margin: 50px;
     
 }
 .chess{
     display:block;
     margin-left: 50px;
     position: relative;
-    border-width: 3px;
+    border-width: 5px;
     border-color: black;
     border-style: groove;
+    margin: 50px;
     
 }
 .board{
     display:block;
     margin-left: 50px;
     position: relative;
-    border-width: 3px;
+    border-width: 5px;
     border-color: black;
     border-style: groove;
+    margin: 50px;
 }.switch{
     display:block;
     margin-left: 50px;
     position: relative;
-    border-width: 3px;
+    border-width: 5px;
     border-color: black;
     border-style: groove;
+    margin: 50px;
     
 }
 
@@ -154,4 +198,20 @@ p{  float:right;
     border-top: 5px;
     border-bottom: 5px;
 
+}
+.footer
+{
+    font-size: 30px;
+    text-align: center;
+    clear:both;
+    
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: var(--tertiarycolor);
+    color: var(--secondarycolor);
+    border-width: 5px;
+    border-color:var(--bordercolor);
+    border-style: groove;
+    border-top: 10px;
+    text-decoration: underline;
 }
