--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -170,8 +170,8 @@ width: 100%;
     
 }
 
-p{  float:right;
-    padding-top: 5px;
+p{ text-align: center;
+     padding-top: 5px;
     margin-left: 35px;
     font-size: 24px;
 }
@@ -216,7 +216,7 @@ p{  float:right;
 @media screen and (max-width = 1500px)
     {   *, .work ,.w{
                  display: flex;
-                 flex-direction: column;    
+                 flex-direction: column;    p
                     }
     } 
 .horiseon
@@ -232,3 +232,14 @@ p{  float:right;
     background-color: rgb(255, 0, 89);
     box-shadow: #8d1515;    
     box-shadow: 5px 0px 0px 5px;}
+  .row {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0 4px;}
+ .column {
+            flex: 50%;
+            padding: 0 4px;}
+            
+ .column img {
+                margin-top: 8px;
+                vertical-align: middle;}
