--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -173,7 +173,8 @@ width: 100%;
 p{ text-align: center;
      padding-top: 5px;
     margin-left: 35px;
-    font-size: 24px;
+    font-size: 24px;;
+    
 }
 
 .h2{
@@ -213,7 +214,7 @@ p{ text-align: center;
     border-top: 10px;
     text-decoration: underline;
 }
-@media screen and (max-width = 1500px)
+@media screen and (width = 1500px)
     {   *, .work ,.w{
                  display: flex;
                  flex-direction: column;
@@ -222,15 +223,13 @@ p{ text-align: center;
 .horiseon
 {
     border-color: rgb(9, 100, 12);
-    background-color: rgb(229, 255, 0);
-    box-shadow: #8d2d15;    
+    background-color: rgb(229, 255, 0); 
     box-shadow: 2px 0px 0px 2px;
 }   
 .horiseon:hover
 {
     border-color: rgb(68, 9, 100);
     background-color: rgb(255, 0, 89);
-    box-shadow: #8d1515;    
     box-shadow: 5px 0px 0px 5px;}
   .row {
         display: flex;
@@ -240,6 +239,6 @@ p{ text-align: center;
             flex: 50%;
             padding: 0 4px;}
             
- .column img {
-                margin-top: 8px;
-                vertical-align: middle;}
+ .column {
+            margin-top: 8px;
+          vertical-align: middle;}
