--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -174,8 +174,7 @@ p{ text-align: center;
      padding-top: 5px;
     margin-left: 35px;
     font-size: 24px;;
-    
-}
+    }
 
 .h2{
     border-top: 0px;
@@ -212,14 +211,8 @@ p{ text-align: center;
     border-color:var(--bordercolor);
     border-style: groove;
     border-top: 10px;
-    text-decoration: underline;
-}
-@media screen and (width = 1500px)
-    {   *, .work ,.w{
-                 display: flex;
-                 flex-direction: column;
-                    }
-    } 
+    text-decoration: underline;}
+     
 .horiseon
 {
     border-color: rgb(9, 100, 12);
