--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -2,19 +2,14 @@
     box-sizing:border-box;
     padding: 0;
     margin:0;
-
-    
-}
+   }
 
 :root{
     --primarycolour:rgb(221, 236, 241);
     --secondarycolor:rgb(39, 47, 161);
     --tertiarycolor:rgb(121, 249, 249);
-    --bordercolor:#0000ff;
-    
+    --bordercolor:#0000ff;  
 }
-
-
 body{
     background:var(--primarycolour);}
   
@@ -28,22 +23,18 @@ body{
     border-bottom-style: groove;
     border-top: 5px;
     }
-
-
 .header h1{
     font-size : 40px ;
     font-style: italic;
     text-decoration: underline;
     font-weight: bolder;
     display: inline-block;
-
 }
 .header div{
     padding-top: 10px;
     float:right;
     font-family: Arial, Helvetica, sans-serif;
     margin-right: 15px;
-
 }
 .header div ul{
     list-style-type: none;
@@ -191,8 +182,8 @@ p{ text-align: center;
     border-style:solid;
     border-color:#0000ff;
     border-width:5px;
-    border-left: 0px;
-    border-right: 0px;
+    border-left: 0;
+    border-right: 0;
     border-top: 5px;
     border-bottom: 5px;
 
@@ -212,18 +203,18 @@ p{ text-align: center;
     border-style: groove;
     border-top: 10px;
     text-decoration: underline;}
-     
+
 .horiseon
 {
     border-color: rgb(9, 100, 12);
     background-color: rgb(229, 255, 0); 
-    box-shadow: 2px 0px 0px 2px;
+    box-shadow: 2px 0 0 2px;
 }   
 .horiseon:hover
 {
     border-color: rgb(68, 9, 100);
     background-color: rgb(255, 0, 89);
-    box-shadow: 5px 0px 0px 5px;}
+    box-shadow: 5px 0 0 5px;}
   .row {
         display: flex;
         flex-wrap: wrap;
