--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -5,10 +5,10 @@
    }
 
 :root{
-    --primarycolour:rgb(221, 236, 241);
-    --secondarycolor:rgb(39, 47, 161);
-    --tertiarycolor:rgb(121, 249, 249);
-    --bordercolor:#0000ff;  
+    primarycolour:rgb(221, 236, 241);
+    secondarycolor:rgb(39, 47, 161);
+    tertiarycolor:rgb(121, 249, 249);
+    bordercolor:#0000ff;  
 }
 body{
     background:var(--primarycolour);}
@@ -85,9 +85,9 @@ align-items: center;
 background-color: var(--tertiarycolor);}
 .w
 {
-    border-top: 0px;
-    border-left: 0px;
-    border-bottom: 0px;
+    border-top: 0;
+    border-left: 0;
+    border-bottom: 0;
     height:600px ;
     border-color: black;
     padding-right: 38px;
